tests/baselines/reference/S7.8.4_A1.2_T2.errors.txt
S7.8.4_A1.2_T2.ts(17,2): error TS1002: Unterminated string literal.
S7.8.4_A1.2_T2.ts(18,2): error TS1002: Unterminated string literal.


==== S7.8.4_A1.2_T2.ts (2 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    info: "StringLiteral :: 'SingleStringCharacters_opt'"
    es5id: 7.8.4_A1.2_T2
    description: >
        SingleStringCharacter :: SourceCharacter but not single-quote ' or
        LineTerminator
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    //CHECK#1
    '
     
!!! error TS1002: Unterminated string literal.
    '
     
!!! error TS1002: Unterminated string literal.
    